# turbo_quant_memory

./: .gitignore  .tqmemoryignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLIENT_INTEGRATIONS.md  CLIENT_INTEGRATIONS.ru.md  CLIENT_INTEGRATIONS.uk.md  MEMORY_STRATEGY.md  MEMORY_STRATEGY.ru.md  MEMORY_STRATEGY.uk.md  README.md  README.ru.md  README.uk.md  TECHNICAL_SPEC.md  TECHNICAL_SPEC.ru.md  TECHNICAL_SPEC.uk.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-client-integration-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-namespace-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-markdown-ingestion/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-compressed-retrieval/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-hydration-and-write-back/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-hardening-and-adoption/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/08-memory-resilience-migration-stats-release-rollout-and-client-refresh/: 08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md  08-VALIDATION.md
.planning/phases/09-secrets-vault/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md
.planning/quick/260403-fe0-implement-knowledge-base-lint-tool-and-d/: 260403-fe0-PLAN.md  260403-fe0-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/: 2026-04-28-lint-false-positives.md
.planning/todos/completed/: 2026-04-03-cache-storage-stats-and-server-info.md  2026-04-03-decouple-writes-from-embedder.md  2026-04-03-detect-stale-index-freshness.md  2026-04-03-harden-hybrid-scope-isolation.md  2026-04-03-improve-unicode-lexical-ranking.md  2026-04-03-make-retrieval-sync-incremental.md  2026-04-03-prune-removed-markdown-roots.md
.planning/todos/pending/: 2026-04-03-cache-storage-stats-and-server-info.md  2026-04-03-decouple-writes-from-embedder.md  2026-04-03-detect-stale-index-freshness.md  2026-04-03-harden-hybrid-scope-isolation.md  2026-04-03-improve-unicode-lexical-ranking.md  2026-04-03-make-retrieval-sync-incremental.md  2026-04-03-prune-removed-markdown-roots.md
benchmarks/: latest.json  latest.md  latest.ru.md  latest.uk.md
docs/superpowers/plans/: 2026-05-30-user-flagged-memory.md
docs/superpowers/specs/: 2026-05-30-user-flagged-memory-design.md  2026-06-06-project-identity-lifecycle-design.md
examples/clients/: SMOKE_CHECKLIST.md  SMOKE_CHECKLIST.ru.md  SMOKE_CHECKLIST.uk.md  claude.project.mcp.json  codex.config.toml  cursor.project.mcp.json  gemini.settings.json  opencode.config.json
scripts/: benchmark_context_savings.py  benchmark_embedder_ab.py  benchmark_paraphrase.py  benchmark_retrieval_global.py  benchmark_retrieval_quality.py  refresh_readme_stats.py  smoke_test.py
src/turbo_memory_mcp/: __init__.py  __main__.py  cli.py  contracts.py  daemon.py  hydration.py  identity.py  ingestion.py  knowledge_lint.py  markdown_parser.py  retrieval.py  retrieval_index.py  server.py  store.py  telemetry.py
src/turbo_memory_mcp/migrations/: __init__.py  io.py  log.py  registry.py  runner.py  snapshot.py  upgrades.py
src/turbo_memory_mcp/secrets/: __init__.py  audit.py  crypto.py  keyresolver.py  paths.py  store.py
tests/: test_agent_ux.py  test_audit_fixes.py  test_batch5_hardening.py  test_cli.py  test_corrupt_file_resilience.py  test_daemon.py  test_embedder_dimension.py  test_embedding_backend.py  test_fresh_install_migrations.py  test_fts_tokenizer.py  test_fusion_gating.py  test_hydration.py  test_identity.py  test_identity_reconcile.py  test_index_drift_repair.py  test_index_resync_logging.py  test_ingestion_read_source.py  test_ingestion_security.py  test_ingestion_store.py  test_ingestion_tools.py  test_knowledge_lint.py  test_markdown_chunking.py  test_migrations.py  test_namespace_tools.py  test_orphan_detection.py  test_provenance.py  test_recent_context.py  test_relations.py  test_retrieval_index.py  test_retrieval_index_lane_logging.py  test_retrieval_quality_metrics.py  test_retrieval_updated_epoch.py  test_secrets_audit.py  test_secrets_cli.py  test_secrets_crypto.py  test_secrets_isolation.py  test_secrets_keyresolver.py  test_secrets_locking.py  test_secrets_mcp_tools.py  test_secrets_migration.py  (+11 more)
